Fixed sidebar overflow with hack and other improvements
1. Sidebar not overflow because it will not grow that long now. Simply
make the text overflow instead. Now each entry will have fixed width.

2. Improved the toggle button name and look

--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,34 @@ textarea {
     margin: 0 auto;
 }
 
+.sidebar-module-box {
+    width: 100%;
+    padding: 5px;
+}
+
+.sidebar-module-code-box {
+    padding: 0px;
+}
+
+.sidebar-module-name-box {
+    /*top: -10px;*/
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.sidebar-module-name {
+    font-variant: small-caps;
+    font-size: smaller;
+}
+
+.sidebar-separator {
+    background-color: white;
+    display: block;
+    height: 1px;
+    width: 100%;
+}
+
 #moduleContent {
     min-height: 450px;
 }
